Revert "feat: add scrollbar, fix: fix bugs"

--- a/style/sass/components/_comment.scss
+++ b/style/sass/components/_comment.scss
@@ -84,7 +84,7 @@
   }
 
   &__dot {
-    background-color: $accent-pink;
+    background-color: #FF4BA2;
     display: inline-block;
     width: 3px;
     height: 3px;
