--- a/style/sass/components/_modals.scss
+++ b/style/sass/components/_modals.scss
@@ -1,10 +1,5 @@
 // Main Modals And PopUps Settings
 .popup {
-    display: none;
-}
-
-.popup-show {
-    display: initial;
     position: fixed;
     background-color: rgba(77, 77, 77, 0.35);
     left: 0;
@@ -15,7 +10,7 @@
     visibility: hidden;
     opacity: 0;
     transition: 0.2s;
-    padding: 0 15px; 
+    padding: 0 15px;
 }
 
 .modal {
@@ -30,7 +25,6 @@
     border-radius: 20px;
     justify-content: space-evenly;
     z-index: 201;
-    font-size: 25px;
 }
 
 .modal__link {
@@ -61,15 +55,12 @@
         background-color: lighten($base-color, 5%);
         color: white;
         transition: .2s;
-        max-width: 180px;
-        font-size: 16px;
     }
     input:hover {
         background-color: lighten($base-color, 10%);
     }
     input::placeholder {
         color: white;
-        font-size: 16px;
     }
 }
 
@@ -86,7 +77,7 @@
     color: white;
     padding: 20px;
     display: flex;
-    max-width: 200px;
+    max-width: 180px;
     text-align: left;
     justify-content: space-evenly;
     @media (max-width: $smallest) {
@@ -105,9 +96,9 @@
         max-width: 200px;
         margin: 0 auto;
         margin-bottom: 20px;
-        // @media (max-width: $smallest) {
-        //     font-size: 13px;
-        // }
+        @media (max-width: $smallest) {
+            font-size: 13px;
+        }
     }
     button {
         background-color: lighten($base-color, 5%);
@@ -124,7 +115,7 @@
     color: white;
     border: none;
     border-radius: 30px;
-    max-width: 220px;
+    max-width: 350px;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -148,7 +139,7 @@
 
 .mistake_modal {
     border-radius: 30px;
-    max-width: 350px;
+    max-width: 300px;
     width: 100%;
     max-height: 300px;
     height: 100%;
@@ -180,7 +171,6 @@
         width: 100%;
         padding: 10px;
         transition: .2s;
-        font-size: 1rem;
 
         &:hover {
             background-color: darken($base-color, 5%)
@@ -195,13 +185,12 @@
         outline: none;
         background-color: transparent;
         border-bottom: 4px solid white;
-        padding: 10px;
+        padding: 10px 0px 0px 10px;
         border: 2px solid white;
         width: 100%;
         height: 100%;
         transition: .2s;
         resize: none;
-        font-size: 1rem;
         &::placeholder {
             color: white;
             font-size: 0.8rem;
@@ -219,9 +208,8 @@
     &__modal {
         color: white;
         padding: 20px;
-        max-width: 220px;
+        max-width: 180px;
         text-align: left;
-        width: 100%;
     }
     &__popup-title {
         margin-bottom: 15px;
@@ -239,7 +227,7 @@
 .popup_rat {
     font-size: 1.3rem;
     margin-bottom: 10px;
-    max-width: 220px;
+    max-width: 200px;
 }
 
 .popup_text {
@@ -256,20 +244,10 @@
 
 /*-------popup_tasks__popup--------------*/
 
-.task {
-    font-size: 16px;
-    text-align: left;
-    line-height: 1.3;
-}
-
-.btn_tasks {
-    margin-top: 8px;
-}
-
 .tasks_modal {
     border: none;
     border-radius: 30px;
-    max-width: 500px;
+    max-width: 750px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 60px;
@@ -281,27 +259,14 @@
 .popup_title {
     font-size: 24px;
     color: white;
-    text-align: left;
+    text-align: center;
     margin-bottom: 15px;
-
-    @media(max-width: $smallest) {
-        display: none;
-    }
-    
 }
 
 .tasks,
 .mistakes {
     display: inline-block;
     width: 100px;
-    text-align: center;
-    background-color: $base-color;
-    padding: 3px;
-    border-radius: 8px;
-
-    * {
-        color: white;
-    }
 }
 
 .mistake_item textarea::placeholder {
@@ -311,15 +276,6 @@
 .tasks_modal h4 {
     margin-bottom: 10px;
     margin-top: 10px;
-
-    &::after {
-        content: '';
-        width: 100%;
-        height: 3px;
-        background-color: white;
-        display: block;
-
-    }
 }
 
 .modal__btn {
@@ -340,13 +296,8 @@
         width: 100%;
         margin-bottom: 30px;
         margin-top: 30px;
-
-        h4 {
-            font-size: 15px;
-        }
-
         .task1 {
-            font-size: 13px;
+            font-size: 10px;
         }
     }
 }
@@ -361,7 +312,7 @@
     color: white;
     border: none;
     border-radius: 30px;
-    max-width: 220px;
+    max-width: 350px;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
